@@ -1,4 +1,8 @@
-﻿drkns 14.09.2014 14:42:05 +0200 - build 4105
+﻿drkns 14.09.2014 18:38:33 +0200 - build 4106
+
+1. Хендлы потоков асинхронной работы с БД закрывались не вовремя и могли накапливаться в неограниченном количестве.
+
+drkns 14.09.2014 14:42:05 +0200 - build 4105
 
 1. Рефакторинг.
 
